def/force-app/main/default/objects/Position__c/Position__c.object-meta.xml
<CustomObject>
    <label>Position</label>
    <nameField>
        <displayFormat>POS-{00000}</displayFormat>
        <label>Position Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Position&apos;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>