def/force-app/main/default/objects/Position__c/fields/Dayssinceposting__c.field-meta.xml
<CustomField>
    <fullName>Dayssinceposting__c</fullName>
    <formula>TODAY() -  DATEVALUE( CreatedDate )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Dayssinceposting</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>