def/force-app/main/default/objects/Position__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Location</label>
    <referenceTo>Location__c</referenceTo>
    <relationshipLabel>Position&apos;s</relationshipLabel>
    <relationshipName>Position_s</relationshipName>
    <type>Lookup</type>
</CustomField>