def/force-app/main/default/objects/Position__c/fields/Locationcity__c.field-meta.xml
<CustomField>
    <fullName>Locationcity__c</fullName>
    <formula>Location__r.city__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Locationcity</label>
    <type>Text</type>
</CustomField>