def/force-app/main/default/objects/Position__c/fields/Numberofjobapplication__c.field-meta.xml
<CustomField>
    <fullName>Numberofjobapplication__c</fullName>
    <label>Numberofjobapplication</label>
    <summaryForeignKey>Job_Application__c.Position__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>