def/force-app/main/default/objects/Position__c/fields/Sub_Departments__c.field-meta.xml
<CustomField>
    <fullName>Sub_Departments__c</fullName>
    <label>Sub Departments</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Department__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Balancesheet</fullName>
            </value>
            <value>
                <fullName>PE vlue</fullName>
            </value>
            <value>
                <fullName>Programming</fullName>
            </value>
            <value>
                <fullName>Testing</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>