def/force-app/main/default/objects/Position__c/validationRules/rentvalidation.validationRule-meta.xml
<ValidationRule>
    <fullName>rentvalidation</fullName>
    <active>true</active>
    <errorConditionFormula>AND(IF(Rent__c &gt; 10000, true, false) ,IF(Rent__c &lt; 20000, true, false) )</errorConditionFormula>
    <errorMessage>Rent cant be between 10000 and 20000</errorMessage>
</ValidationRule>